--- a/pom.xml
+++ b/pom.xml
@@ -88,5 +88,14 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.apache.calcite/calcite-core -->
+      <dependency>
+          <groupId>org.apache.calcite</groupId>
+          <artifactId>calcite-core</artifactId>
+          <version>1.15.0</version>
+          <scope>test</scope>
+      </dependency>
+
   </dependencies>
 </project>
